# obstacle_detector

./: CMakeLists.txt  package.xml
include/: visibility_control.h
include/obstacle_detector/: obstacle_extractor.h  obstacle_tracker.h
include/obstacle_detector/utilities/: math_utilities.h  tracked_obstacle.h
launch/: extractor.py  rviz.py  tracker.py
msg/: Obstacles.msg
params/: extractor.yaml  tracker.yaml
resources/: obstacle_detector.rviz
src/: obstacle_extractor.cpp  obstacle_tracker.cpp
src/displays/: circle_visual.cpp  obstacles_display.cpp  segment_visual.cpp
src/nodes/: obstacle_extractor_node.cpp  obstacle_tracker_node.cpp
