<?xml version="1.0"?>
<package format="3">
  <name>obstacle_detector</name>
  <version>1.0.0</version>
  <description>Detect obstacles in form of line segments and circles from 2D laser scans.</description>
  <maintainer email="knb@artif.org">Kensei Nakamura</maintainer>
  <author>Mateusz Przybyla</author>
  <author>Kensei Nakamura</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>rosidl_default_generators</build_depend> -->

  <depend>launch_ros</depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geometry2</depend>
  <depend>laser_geometry</depend>
  <depend>obstacle_detector_interfaces</depend>
  <!-- <depend>libqt5-widgets</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend> -->

  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
